# Snake

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  highScores.db  main.cpp  snake
Definitions/: Logic.h  ResolutionVariables.h  ResolutionVariables.h.gch  TileMapArr.h
GameLogic/: GameEngine.cpp  GameEngine.h  GameOverState.cpp  GameOverState.h  GameState.cpp  GameState.h  GameState.h.gch  MenuState.cpp  MenuState.h  MenuState.h.gch  PauseState.cpp  PauseState.h  PlayerMove.cpp  PlayerMove.h  ScoreBoard.cpp  ScoreBoard.h  State.h  State.h.gch  StateManager.h.gch
GameObjects/: Board.cpp  Board.h  Button.cpp  Button.h  Fruit.cpp  Fruit.h  Snake.cpp  Snake.h  TileMap.h
GameStates/: GameOverState.cpp  GameOverState.h  GameState.cpp  GameState.h  MenuState.cpp  MenuState.h  PauseState.cpp  PauseState.h  State.h  StateManager.h
